# Lexecon

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUTH_TEST_REPORT.md  BACKEND_FRONTEND_INTEGRATION.md  CLAUDE.MD  CONTRIBUTING.md  DASHBOARD_GUIDE.md  Dockerfile  ENGINEER_DASHBOARD.html  ENTERPRISE_READINESS_100_PERCENT.md  ENTERPRISE_READINESS_COMPLETION.md  ENTERPRISE_READINESS_v1.0_COMPLETE.md  ENTERPRISE_SALES_ROOM_STRATEGY.md  ENTERPRISE_SECURITY_IMPLEMENTATION.md  FRONTEND_INTEGRATION.md  INVESTOR_FAQ.md  LEXECON_EVOLUTION.md  MULTI_DOMAIN_GOVERNANCE_VISION.md  MULTI_DOMAIN_IMPLEMENTATION_ROADMAP.md  Makefile  PERSONAL_ENGINEER_DASHBOARD.md  PITCH_DECK.md  PITCH_DECK_DESIGN_GUIDE.md  QUICK_START.md  README.md  REPOSITORY_STATUS.md  SECURITY.md  SOLO_FOUNDER_PITCH_GUIDE.md  STANDARD_SETTING_STRATEGY.md  TASKS_NEXT_2_WEEKS.md  TECHNICAL_DEEP_DIVE_ANALYSIS.md  TEST_COVERAGE_ANALYSIS.md  VAULT_QUICKSTART.md  bandit-report.json  coverage.json  dashboard.html  (+19 more)
.github/: ACTIVATION_CHECKLIST.md  WORKFLOWS_SETUP.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  dependency-review.yml  deploy-prod.yml  deploy-production.yml  deploy-staging.yml  deploy-to-production.yml  infrastructure.yml  label.yml  test.yml
deployment/grafana/dashboards/: lexecon-overview.json
deployment/helm/lexecon/: Chart.yaml  values.yaml
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  servicemonitor.yaml
deployment/prometheus/: prometheus.yml
deployment/prometheus/alerts/: lexecon.yml
docs/: ADAPTER_GUIDE.md  API_VERSIONING.md  AUDIT_PACKET_SPEC.md  AUDIT_VERIFICATION.md  BRANCH_PROTECTION_SETUP.md  BUYER_EVALUATION_CHECKLIST.md  DEMO_SCRIPT.md  DEPENDENCIES.md  ENTERPRISE_READINESS_GAPS.md  FEATURE_FLAGS.md  GOVERNANCE_PRIMITIVES_SPEC.md  HUMAN_CENTERED_GOVERNANCE_UX.md  IMPLEMENTATION_GUIDE.md  MONITORING.md  OVERVIEW.md  PERFORMANCE.md  POLICY_ENGINE_CONFORMANCE.md  PRODUCTION_DEPLOYMENT.md  QUICK_START_GUIDE.md  SECURITY_POSTURE.md  UI_LANGUAGE_GLOSSARY.md
docs/api/: AUDIT_API_V1.md
docs/architecture/: closed_loop.mmd
docs/audit-dashboard/: README.md  audit-dashboard-specification.md
docs/business/: ACCESS_EVERYTHING_GUIDE.md  CONSERVATIVE_ROI_MODEL.md  FINANCIAL_MODEL_ROI.md
docs/business/monetization/: DEMO_ENVIRONMENT.md  LEXECON_IMPLEMENTATION_PLAN.md  README.md  SALES_PLAYBOOK.md
docs/compliance/: GDPR.md  HIPAA.md  ISO27001.md  NIST.md  SECURITY_POLICY.md  SOC2.md
docs/design-system/: README.md  lexecon-component-guide.md  lexecon-design-system.md
examples/: approved_request.json  example_policy.json  safe_request.json
examples/policies/: README.md  enterprise_general_policy.json  financial_services_policy.json  gdpr_compliance_policy.json  hipaa_healthcare_policy.json
frontend/: README.md  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  endpoints.js
frontend/src/components/: AuditDashboard.jsx  DecisionDrilldown.jsx  RequireAuth.jsx
frontend/src/design-system/: SlideOver.jsx  lexecon-components.jsx  lexecon-design-tokens.js
frontend/src/pages/: Login.jsx
infrastructure/: README.md
infrastructure/grafana/: lexecon-dashboard.json
infrastructure/helm/: Chart.yaml  values.yaml
infrastructure/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
infrastructure/prometheus/: alerts.yml
infrastructure/scripts/: deploy.sh  rollback.sh
infrastructure/terraform/: main.tf  outputs.tf  production.tfvars  staging.tfvars  variables.tf
lexecon_keys/: private_key.pem  public_key.pem
migrations/: 001_add_mfa_support.py  002_add_password_policies.py  003_add_oidc_support.py
model_governance_pack/: README.md  __init__.py
model_governance_pack/adapters/: anthropic_adapter.py  base.py  openai_adapter.py  verification.py
model_governance_pack/examples/: anthropic_example.py  openai_example.py
model_governance_pack/models/: __init__.py  action.py  actor.py  compliance_control.py  context.py  decision.py  escalation.py  evidence_artifact.py  override.py  policy.py  resource.py  risk.py
model_governance_pack/prompts/: system_prompt.md  system_prompt_concise.txt
model_governance_pack/schemas/: action.json  actor.json  compliance_control.json  context.json  decision.json  decision_request.json  escalation.json  evidence_artifact.json  override.json  policy.json  resource.json  risk.json
scripts/: coverage_analysis.py  manage_secrets.py  migrate_sqlite_to_postgres.py
scripts/performance/: optimize_database.sql  run_load_test.sh
src/lexecon/: __init__.py
src/lexecon/api/: server.py  validation.py
src/lexecon_keys/: private_key.pem  public_key.pem
tests/: conftest.py  test_adapters.py  test_api.py  test_api_additional.py  test_api_coverage_boost.py  test_append_only_store.py  test_article_12_records.py  test_article_14_oversight.py  test_audit_export.py  test_audit_service.py  test_audit_verify.py  test_audit_verify_tool.py  test_cache.py  test_capability_tokens.py  test_cli.py  test_compliance_mapping.py  test_coverage_boost.py  test_coverage_boost_decision.py  test_coverage_comprehensive.py  test_coverage_isolated.py  test_decision_service.py  test_escalation_service.py  test_evidence_service.py  test_export_determinism.py  test_features.py  test_governance_api.py  test_governance_models.py  test_health.py  test_identity.py  test_ledger.py  test_logging.py  test_metrics.py  test_middleware.py  test_override_service.py  test_policy.py  test_rate_limiter.py  test_responsibility_storage.py  test_responsibility_tracker.py  test_risk_service.py  test_security.py  (+4 more)
tests/integration/: test_api_integration.py  test_policy_integration.py
tests/k6/: README.md  load_test.js
tests/load/: locustfile.py
wiki/: API-Reference.md  Architecture.md  FAQ.md  Getting-Started.md  Home.md  Installation.md  Policy-Guide.md  README.md  Troubleshooting.md
(+75 files in other folders)
